force-app/main/default/objects/Account/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Stores unique number generated by automation for every org and person account; used as a primary reference key to synchronize account data, memberships, orders, and invoices between Salesforce and external systems, ensuring data consistency and avoiding duplication.</description>
    <externalId>true</externalId>
    <label>Account Id (External)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>