force-app/main/default/objects/Account/fields/Account_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_Number__c</fullName>
    <description>Stores numeric account ID; used for system-level reference.</description>
    <label>Account Id Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>