force-app/main/default/objects/Account/fields/Account_Name_Org_Person__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Org_Person__c</fullName>
    <description>Stores combined account name; used for display.</description>
    <formula>IF( ISBLANK(Name), FirstName+&quot; &quot;+ LastName, Name)</formula>
    <label>Account Name (Org / Person)</label>
    <type>Text</type>
</CustomField>