force-app/main/default/objects/Account/fields/Active_Membership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Membership_End_Date__c</fullName>
    <description>Stores system-calculated membership end date from membership record.</description>
    <formula>Membership__r.TermEndDate__c</formula>
    <label>Org - Active Membership End Date</label>
    <type>Date</type>
</CustomField>