force-app/main/default/objects/Account/fields/Active_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Active_Membership_Type__c</fullName>
    <description>Stores active membership type; determines benefits, access, and entitlements.</description>
    <formula>Membership__r.Membership_Type__c</formula>
    <label>Org - Active Membership Type</label>
    <type>Text</type>
</CustomField>