force-app/main/default/objects/Account/fields/Add_to_roster__c.field-meta.xml
<CustomField>
    <fullName>Add_to_roster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to roster</label>
    <type>Checkbox</type>
</CustomField>