force-app/main/default/objects/Account/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <description>Stores address type classification; used for segmentation.</description>
    <label>Address Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>