force-app/main/default/objects/Account/fields/Available_Member_Slot__c.field-meta.xml
<CustomField>
    <fullName>Available_Member_Slot__c</fullName>
    <description>Stores available member slots; used when adding new members.</description>
    <formula>MAX(0, Max_Sub_Members__c  -  Rollup_Sub_Member__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Member Slot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>