force-app/main/default/objects/Account/fields/CMS_Org_Account__c.field-meta.xml
<CustomField>
    <fullName>CMS_Org_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMS Org Account</label>
    <type>Checkbox</type>
</CustomField>