force-app/main/default/objects/Account/fields/Company_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_2__c</fullName>
    <description>Stores secondary company phone number; used as an alternate communication channel if the primary number is unavailable.</description>
    <label>Company Phone 2</label>
    <type>Phone</type>
</CustomField>