force-app/main/default/objects/Account/fields/Company_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_3__c</fullName>
    <description>Stores additional company phone number; serves as a backup contact method to ensure communication continuity.</description>
    <label>Company Phone 3</label>
    <type>Phone</type>
</CustomField>