force-app/main/default/objects/Account/fields/Coordinating_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Coordinating_Program_Name__c</fullName>
    <description>Stores program name; used for reporting and identification.</description>
    <formula>Coordinating_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinating Program Name</label>
    <type>Text</type>
</CustomField>