force-app/main/default/objects/Account/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>The county part of the individual&apos;s address.</description>
    <label>County</label>
    <type>TextArea</type>
</CustomField>