force-app/main/default/objects/Account/fields/Deductibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Deductibility_Status__c</fullName>
    <label>Deductibility Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>