force-app/main/default/objects/Account/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Stores department or division information within an organization; used for internal segmentation and reporting.</description>
    <label>Org Department</label>
    <type>TextArea</type>
</CustomField>