force-app/main/default/objects/Account/fields/Directory__c.field-meta.xml
<CustomField>
    <fullName>Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the individual is included in a specific directory.</description>
    <label>Directory</label>
    <type>Checkbox</type>
</CustomField>