force-app/main/default/objects/Account/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <description>Indicates do-not-call preference; ensures compliance with communication regulations.</description>
    <formula>IF(PersonContact.DoNotCall, True, False)</formula>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>