force-app/main/default/objects/Account/fields/Donor_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Type__c</fullName>
    <description>Stores donor classification (e.g., individual, corporate, govt); used for segmentation and check whichh kind of donor is this.</description>
    <label>Org Donor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>