force-app/main/default/objects/Account/fields/Email_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_2__c</fullName>
    <description>Stores secondary email address; used as a fallback communication method if the primary email fails.</description>
    <label>Org Email Address 2</label>
    <type>Email</type>
</CustomField>