force-app/main/default/objects/Account/fields/Email_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_3__c</fullName>
    <description>Stores additional email address; provides redundancy in communication channels.</description>
    <label>Org Email Address 3</label>
    <type>Email</type>
</CustomField>