force-app/main/default/objects/Account/fields/Email_Org_Person__c.field-meta.xml
<CustomField>
    <fullName>Email_Org_Person__c</fullName>
    <description>Stores combined email; used for unified communication.</description>
    <formula>IF(
    NOT(ISBLANK(Orgnanization_Email__c)),
    Orgnanization_Email__c,
    IF(
        NOT(ISBLANK(PersonEmail)),
        PersonEmail,
        Primary_Contact_Email__c
    )
)</formula>
    <label>Email (Org / Person)</label>
    <type>Text</type>
</CustomField>