force-app/main/default/objects/Account/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <description>The individual&apos;s Facebook profile link or username.</description>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>