force-app/main/default/objects/Account/fields/Fundraising_Import_Temp__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Import_Temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fundraising Import Temp</label>
    <type>Checkbox</type>
</CustomField>