force-app/main/default/objects/Account/fields/Government_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Government_Id_Type__c</fullName>
    <label>Government Id Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>