force-app/main/default/objects/Account/fields/Great_American_Main_Street_Award__c.field-meta.xml
<CustomField>
    <fullName>Great_American_Main_Street_Award__c</fullName>
    <description>Indicates if the individual or their organization has received a Great American Main Street Award.</description>
    <label>Great American Main Street Award</label>
    <type>TextArea</type>
</CustomField>