force-app/main/default/objects/Account/fields/Household_Address__c.field-meta.xml
<CustomField>
    <fullName>Household_Address__c</fullName>
    <description>The address associated with the individual&apos;s household.</description>
    <label>Household Address</label>
    <type>Address</type>
</CustomField>