force-app/main/default/objects/Account/fields/Household_Contact__c.field-meta.xml
<CustomField>
    <fullName>Household_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the primary contact person for the household.</description>
    <label>Household Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Household Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>