force-app/main/default/objects/Account/fields/Household_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Household_Created_Date__c</fullName>
    <description>Stores household creation date; used for tracking and reporting for household account only.</description>
    <label>Household Created Date</label>
    <type>Date</type>
</CustomField>