force-app/main/default/objects/Account/fields/Household_Id__c.field-meta.xml
<CustomField>
    <fullName>Household_Id__c</fullName>
    <description>Stores household identifier; used to group related members.</description>
    <label>Household Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>