force-app/main/default/objects/Account/fields/Household_Name__c.field-meta.xml
<CustomField>
    <fullName>Household_Name__c</fullName>
    <description>Stores household name; used to group multiple members under a single household entity but now this is a household account</description>
    <label>Household Name</label>
    <type>TextArea</type>
</CustomField>