force-app/main/default/objects/Account/fields/Household_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Household_Salutation__c</fullName>
    <description>The greeting or form of address used for the household.</description>
    <label>Household Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>prof.</fullName>
            </value>
            <value>
                <fullName>Mx.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>