force-app/main/default/objects/Account/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>A unique identifier for the individual within the system.</description>
    <label>Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>