force-app/main/default/objects/Account/fields/Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Id_Type__c</fullName>
    <label>Id Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>