force-app/main/default/objects/Account/fields/Include_in_Statewide_Community__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Statewide_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the individual is part of a statewide community group.</description>
    <label>Include in Statewide Community</label>
    <type>Checkbox</type>
</CustomField>