force-app/main/default/objects/Account/fields/Individual_Sub_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Individual_Sub_Member_Count__c</fullName>
    <label>Individual Sub member count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>