force-app/main/default/objects/Account/fields/Internal_Classification__c.field-meta.xml
<CustomField>
    <fullName>Internal_Classification__c</fullName>
    <label>Internal Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Strengthen</fullName>
            </value>
            <value>
                <fullName>High Performing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>