force-app/main/default/objects/Account/fields/Is_Donor__c.field-meta.xml
<CustomField>
    <fullName>Is_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates donor status that this account made some donation; used alongside membership tracking.</description>
    <inlineHelpText>Check this box if receive or have received donations from this account.</inlineHelpText>
    <label>Is Donor</label>
    <type>Checkbox</type>
</CustomField>