force-app/main/default/objects/Account/fields/Is_Person_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Person_Account_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a Person Account has already been created; prevents duplicate identity creation.</description>
    <label>Is Person Account Created</label>
    <type>Checkbox</type>
</CustomField>