force-app/main/default/objects/Account/fields/Is_PR_Created_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_PR_Created_From_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PR Created From Account</label>
    <type>Checkbox</type>
</CustomField>