force-app/main/default/objects/Account/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Stores job title or designation; used for segmentation and professional categorization.</description>
    <label>Job Title</label>
    <type>TextArea</type>
</CustomField>