force-app/main/default/objects/Account/fields/Legacy_ID_from_AS400__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID_from_AS400__c</fullName>
    <description>Legacy ID from previous system (AS400)</description>
    <label>Legacy ID from AS400</label>
    <type>TextArea</type>
</CustomField>