force-app/main/default/objects/Account/fields/Login_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Login_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A status indicating that the login credentials have been confirmed.</description>
    <label>Login Confirmed</label>
    <type>Checkbox</type>
</CustomField>