force-app/main/default/objects/Account/fields/Main_Account_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Account_and_Name__c</fullName>
    <formula>Main_Account_Id__c &amp; &quot;-&quot; &amp; FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Account and Name</label>
    <type>Text</type>
</CustomField>