force-app/main/default/objects/Account/fields/Main_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Main_Account_Id__c</fullName>
    <description>Stores main account reference; used in hierarchical relationships. shows parent account external id.</description>
    <label>Main Account Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>