force-app/main/default/objects/Account/fields/Max_Sub_Members__c.field-meta.xml
<CustomField>
    <fullName>Max_Sub_Members__c</fullName>
    <description>Shows members count that are reached on account, count only Admin, Primary contact, sub-member roles from ACR.</description>
    <formula>Membership__r.Membership_Type__r.Max_Sub_Members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Sub Members Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>