force-app/main/default/objects/Account/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores linked membership; central to membership lifecycle tracking and direct check about memberships</description>
    <label>Membership</label>
    <referenceTo>Memberships__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>