force-app/main/default/objects/Account/fields/Membership_Term_Fee__c.field-meta.xml
<CustomField>
    <fullName>Membership_Term_Fee__c</fullName>
    <description>Stores calculated membership fee; used for validation during billing.</description>
    <formula>Membership__r.Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Term Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>