force-app/main/default/objects/Account/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <description>Stores membership category; used for classification and reporting.</description>
    <formula>Membership__r.Membership_Type__r.Name</formula>
    <label>Membership Type</label>
    <type>Text</type>
</CustomField>