force-app/main/default/objects/Account/fields/MSARP__c.field-meta.xml
<CustomField>
    <fullName>MSARP__c</fullName>
    <description>Indicates if the individual is part of the Main Street America Revitalization Program.</description>
    <label>MSARP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSARP 2019</fullName>
            </value>
            <value>
                <fullName>MSARP 2018</fullName>
            </value>
            <value>
                <fullName>MSARP 2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>