force-app/main/default/objects/Account/fields/Non_Profit_Status__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Status__c</fullName>
    <description>This field denotes the Individual Applicant’s non profit status</description>
    <label>Non Profit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified - In Good Standing</fullName>
            </value>
            <value>
                <fullName>Verified - Not in Good Standing</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
            </value>
            <value>
                <fullName>Verification In Progress</fullName>
            </value>
            <value>
                <fullName>N/A (Not a Nonprofit)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>