force-app/main/default/objects/Account/fields/Non_Profit_Status_Verification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Status_Verification_Notes__c</fullName>
    <description>This field denotes the additional verification notes</description>
    <label>Non Profit Status Verification Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>