force-app/main/default/objects/Account/fields/OFAC_Status__c.field-meta.xml
<CustomField>
    <fullName>OFAC_Status__c</fullName>
    <label>OFAC Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>