force-app/main/default/objects/Account/fields/Organization_Sub_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Organization_Sub_Member_Count__c</fullName>
    <label>Organization Sub Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>