force-app/main/default/objects/Account/fields/Orgnanization_Email__c.field-meta.xml
<CustomField>
    <fullName>Orgnanization_Email__c</fullName>
    <description>Stores organization’s primary email address; used for official communication. (This can be organization email or primary contact email).</description>
    <label>Organization Email</label>
    <type>Email</type>
</CustomField>