force-app/main/default/objects/Account/fields/Origin_Category__c.field-meta.xml
<CustomField>
    <fullName>Origin_Category__c</fullName>
    <description>The initial category or grouping when the individual was entered into the system.</description>
    <label>Origin Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>Standard Membership Form</fullName>
            </value>
            <value>
                <fullName>Sub-Membership Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>