force-app/main/default/objects/Account/fields/Paid_By_CP__c.field-meta.xml
<CustomField>
    <fullName>Paid_By_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid By CP</label>
    <type>Checkbox</type>
</CustomField>