force-app/main/default/objects/Account/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <description>This field stores the name of the payer</description>
    <formula>IF(
    TEXT(Program_Type__c) = &quot;Coordinating Program&quot;,
    IF(
        NOT(ISBLANK(Coordinating_Program__c)),
        Coordinating_Program__r.Name,
        IF(
            NOT(ISBLANK(Parent_Account__c)),
            Parent_Account__r.Name,
            NULL
        )
    ),
    NULL
)</formula>
    <label>Payer</label>
    <type>Text</type>
</CustomField>