force-app/main/default/objects/Account/fields/Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Email__c</fullName>
    <description>Stores primary email address; used as the main communication and login credential.</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>