force-app/main/default/objects/Account/fields/Person_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_First_Name__c</fullName>
    <description>Stores first name; used in Person Account creation and personalization.</description>
    <label>Primary Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>