force-app/main/default/objects/Account/fields/Person_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Last_Name__c</fullName>
    <description>Stores last name; used in Person Account creation and identification.</description>
    <label>Primary Contact Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>