force-app/main/default/objects/Account/fields/Person_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Person_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>