force-app/main/default/objects/Account/fields/Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Person_Phone__c</fullName>
    <description>Stores phone number; used for general communication.</description>
    <label>Person Phone Number</label>
    <type>Phone</type>
</CustomField>