force-app/main/default/objects/Account/fields/Phone_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_2__c</fullName>
    <description>Stores secondary phone number; backup communication channel.</description>
    <label>Org Phone Number 2</label>
    <type>Phone</type>
</CustomField>