force-app/main/default/objects/Account/fields/Phone_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_3__c</fullName>
    <description>Stores additional phone number; redundancy in contact information.</description>
    <label>Org Phone Number 3</label>
    <type>Phone</type>
</CustomField>